--- a/src/ssl_entropy_minimization/config/unet2d_baseline.cfg
+++ b/src/ssl_entropy_minimization/config/unet2d_baseline.cfg
@@ -5,8 +5,8 @@ tensor_type = float
 task_type = seg
 root_dir  = ../../fruit_data
 train_csv = config/data/image_train.csv
-valid_csv = config/data/image_train.csv
-test_csv  = config/data/image_train.csv
+valid_csv = config/data/image_valid.csv
+test_csv  = config/data/image_test.csv
 
 train_batch_size = 4
 
