training config updates

--- a/src/ssl_entropy_minimization/config/unet2d_em.cfg
+++ b/src/ssl_entropy_minimization/config/unet2d_em.cfg
@@ -13,11 +13,12 @@ train_batch_size = 4
 train_batch_size_unlab = 4
 
 # data transforms
-train_transform = [Pad, RandomRotate, RandomCrop, RandomFlip, NormalizeWithMeanStd, GammaCorrection, GaussianNoise, LabelToProbability]
+train_transform = [Rescale, Pad, RandomRotate, RandomCrop, RandomFlip, NormalizeWithMeanStd, GammaCorrection, GaussianNoise, LabelToProbability]
 train_transform_unlab = [Pad, RandomRotate, RandomCrop, RandomFlip, NormalizeWithMeanStd, GammaCorrection, GaussianNoise]
 valid_transform       = [NormalizeWithMeanStd, Pad, LabelToProbability]
 test_transform        = [NormalizeWithMeanStd, Pad]
 
+Rescale_output_size = [1140, 2028]
 Pad_output_size = [1520, 2704]
 Pad_ceil_mode   = False
 
@@ -53,8 +54,8 @@ GaussianNoise_probability = 0.5
 net_type = UNet2D
 
 # number of class, required for segmentation task
-class_num     = 4
-in_chns       = 1
+class_num     = 2
+in_chns       = 3
 feature_chns  = [16, 32, 64, 128, 256]
 dropout       = [0.0, 0.0, 0.0, 0.5, 0.5]
 bilinear      = True
