--- a/src/ssl_entropy_minimization/config/unet2d_baseline.cfg
+++ b/src/ssl_entropy_minimization/config/unet2d_baseline.cfg
@@ -11,11 +11,12 @@ test_csv  = config/data/image_test.csv
 train_batch_size = 4
 
 # data transforms
-train_transform = [Pad, RandomRotate, RandomCrop, RandomFlip, NormalizeWithMeanStd, GammaCorrection, GaussianNoise, LabelToProbability]
+train_transform = [Rescale, Pad, RandomRotate, RandomCrop, RandomFlip, NormalizeWithMeanStd, GammaCorrection, GaussianNoise, LabelToProbability]
 valid_transform       = [NormalizeWithMeanStd, Pad, LabelToProbability]
 test_transform        = [NormalizeWithMeanStd, Pad]
 
-Pad_output_size = [1520, 2704]
+Rescale_output_size = [1140, 2028]
+Pad_output_size = [1152, 2176]
 Pad_ceil_mode   = False
 
 RandomRotate_angle_range_d = [-90, 90]
@@ -80,9 +81,9 @@ ckpt_save_dir    = model/unet2d_baseline
 
 # start iter
 iter_start = 0
-iter_max   = 1000
+iter_max   = 10000
 iter_valid = 100
-iter_save  = [2000]
+iter_save  = [2000, 10000]
 
 [testing]
 # list of gpus
