--- a/src/ssl_entropy_minimization/config/unet2d_em.cfg
+++ b/src/ssl_entropy_minimization/config/unet2d_em.cfg
@@ -19,7 +19,8 @@ valid_transform       = [NormalizeWithMeanStd, Pad, LabelToProbability]
 test_transform        = [NormalizeWithMeanStd, Pad]
 
 Rescale_output_size = [1140, 2028]
-Pad_output_size = [1520, 2704]
+Pad_output_size = [1152, 2176]
+# Pad_output_size = [1520, 2704]
 Pad_ceil_mode   = False
 
 RandomRotate_angle_range_d = [-90, 90]
@@ -77,22 +78,22 @@ weight_decay  = 1e-5
 # for lr schedular
 lr_scheduler  = ReduceLROnPlateau
 lr_gamma      = 0.5
-ReduceLROnPlateau_patience = 4000
-early_stop_patience = 10000
+ReduceLROnPlateau_patience = 200
+early_stop_patience = 900
 
 ckpt_save_dir    = model/unet2d_em
 
 # start iter
 iter_start = 0
-iter_max   = 10000
+iter_max   = 200
 iter_valid = 100
-iter_save  = [1000, 10000]
+iter_save  = [100, 1000]
 
 [semi_supervised_learning]
 ssl_method     = EntropyMinimization
 regularize_w   = 0.1
-rampup_start   = 1000
-rampup_end     = 20000
+rampup_start   = 100
+rampup_end     = 200
 
 [testing]
 # list of gpus
